feat: change *htpasswd* file format to JSON, add new *approval_needed* config item, add check for registration approval

--- a/package.json
+++ b/package.json
@@ -72,8 +72,5 @@
     "node": ">=0.10"
   },
   "preferGlobal": true,
-  "license": "WTFPL",
-  "publishConfig": {
-    "registry": "http://localhost:4873/"
-  }
+  "license": "WTFPL"
 }
